--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -3,7 +3,7 @@
 <ul>
 {% for choice in question.choice_set.all %}
     <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %} <!-- pluralize sluzi za 1 vote, 2 votes -->
+{% endfor %}
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
